# early_warning_model

./: EDA.ipynb  README.md  config.cfg  critical_transition_definition.ipynb  functions.py  import_and_preparation.ipynb  modelling.ipynb  pyproject.toml
Data/: IWV_holdings.csv  dataset_2025.parquet  dataset_tail.parquet  final_max.parquet  final_mean.parquet  final_median.parquet  final_min.parquet  params.parquet  params_mean.parquet  params_sep.parquet  params_sep_mean.parquet  seismic.mseed
Definition_simulations/: CL_BTW.parquet  CL_MA.parquet  ER_BTW.parquet  ER_MA.parquet
Definition_simulations/original/: CL_BTW_base.parquet  CL_BTW_fa.parquet  CL_MA_base.parquet  CL_MA_fa.parquet  ER_BTW_base.parquet  ER_BTW_fa.parquet  ER_MA_base.parquet  ER_MA_fa.parquet  MA_CL.csv  MA_CL_fa.csv  normal.parquet  rw.parquet
Definition_simulations/stats/: CL_BTW_1_15_100.parquet  CL_BTW_1_1_100.parquet  CL_BTW_1_25_100.parquet  CL_BTW_1_2_100.parquet  CL_BTW_1_35_100.parquet  CL_BTW_1_3_100.parquet  CL_BTW_1_45_100.parquet  CL_BTW_1_4_100.parquet  CL_BTW_1_5_100.parquet  (+113 more)
Params/: params_CatBoost.parquet  params_LightGBM.parquet  params_Probit.parquet  params_RF.parquet  params_SVM.parquet  params_XGBoost.parquet  params_mean_CatBoost.parquet  params_mean_LightGBM.parquet  params_mean_RF.parquet  params_mean_SVM.parquet  params_mean_XGBoost.parquet
Params_solar/: params_CatBoost.parquet  params_LightGBM.parquet  params_Probit.parquet  params_XGBoost.parquet  params_mean_CatBoost.parquet  params_mean_LightGBM.parquet  params_mean_Probit.parquet  params_mean_XGBoost.parquet
(+142 files in other folders)
